--- a/src/pages/admin.html
+++ b/src/pages/admin.html
@@ -70,9 +70,9 @@
 .editor-append {
   position: absolute;
   top: 10px;
-  left: 0;
-  text-align: center;
-  width: 100%;
+  top: 10px;
+  left: 50%;
+  width: 50%;
   clear: both;
 }
 
