博客系统初步完成

--- a/src/pages/list.html
+++ b/src/pages/list.html
@@ -1,19 +1,25 @@
-<div class="bg-img"><img src="https://unsplash.it/500/1080/?random"></div>
-<div class="blog-list">
+<div id="header"></div>
+<div class="list">
   {{~data.resource :item}}
   <div class="item" data-id={{!item.id}}>
-    <h1 class="title"><a href="#/{{!item.id}}">{{!item.title}}</a></h1>
-    <h5 class="title">{{!item.formatDate}}</h5>
+    <h2><a href="#/{{!item.id}}" class="title">{{!item.title}}</a></h2>
+    <div class="date">{{!item.formatDate}}</div>
     <div class="content">{{!item.intro}}</div>
   </div>
   {{~}}
-  <h1 class="loadmore"><a href="javascript:;" id="loadMore">加载更早的博客...</a></h1>
+  <div class="loadmore"><a href="javascript:;" id="loadMore">加载更早的博客 ...</a></div>
 </div>
 
 <script>
   var coala = require('coala')
 
   module.exports = {
+    refs: {
+      header: {
+        el: '#header',
+        component: require('../components/header.html')
+      }
+    },
     data: function() {
       return this.fetch()
     },
@@ -21,7 +27,7 @@
     listen: {
       update: function() {
         this.data.resource.forEach(function(item) {
-          item.intro = $(item.contentHTML).text().substr(1, 200)
+          item.intro = $(item.contentHTML).text().substr(0, 225)
           var d = new Date(item.createTime)
           item.formatDate = d.getFullYear() + '-' + (d.getMonth() + 1) + '-' + d.getDate() + ' ' +
               d.getHours() + ':' + d.getMinutes() + ':' + d.getSeconds()
@@ -50,11 +56,12 @@
     },
 
     handle: {
-      loadMore: function() {
+      loadMore: function(e) {
         var _this = this
+        var $a = $(e.target)
         this.parmas._page++
         this.fetch().done(function(result) {
-          if (result.length === 0) return alert('没有更早的博客了!')
+          if (result.length === 0) return $a.text('所有的博客已加载！')
           _this.data.resource = _this.data.resource.concat(result)
           _this.update()
         })
@@ -64,21 +71,47 @@
 </script>
 
 <style>
-  .bg-img {
-    position: fixed;
-    top: 0;
+  .list {
+    position: absolute;
+    top: 350px;
     left: 0;
+    width: 100%;
   }
 
-  .blog-list {
-    position: absolute;
-    top: 0;
-    left: 500px;
-    padding: 20px;
+  .item {
+    max-width: 980px;
+    margin: auto;
+    padding: 10px;
+  }
+
+  .title {
+    font-size: 20px;
+    color: #333333;
+    letter-spacing: 0;
+    text-decoration: none;
+  }
+  
+  .date {
+    font-size: 12px;
+    color: #A9A9A9;
+    letter-spacing: 0;
+  }
+
+  .content {
+    margin-top: 10px;
+    font-size: 14px;
+    color: #737373;
   }
 
   .loadmore {
+    height: 80px;
+    line-height: 80px;
     text-align: center;
   }
 
+  .loadmore a {
+    text-decoration: none;
+    font-size: 16px;
+    color: #bdbdbd;
+  }
 </style>
