--- a/src/pages/detail.html
+++ b/src/pages/detail.html
@@ -1,4 +1,5 @@
-<div>
+<div id="header"></div>
+<div class="detail">
   <div class="item">
     <h1 class="title">{{!data.resource.title}}</h1>
     <div class="markdown-body">{{=data.resource.contentHTML}}</div>
@@ -10,6 +11,12 @@
   require('../assets/css/markdown.css')
 
   module.exports = {
+    refs: {
+      header: {
+        el: '#header',
+        component: require('../components/header.html')
+      }
+    },
     data: function() {
       return this.fetch()
     },
@@ -26,11 +33,16 @@
 </script>
 
 <style>
-  body {
-    box-sizing: border-box;
-    min-width: 200px;
+  .detail {
+    position: absolute;
+    top: 350px;
+    left: 0;
+    width: 100%;
+  }
+
+  .item {
     max-width: 980px;
-    margin: 0 auto;
-    padding: 45px;
+    margin: auto;
+    padding: 10px;
   }
 </style>
