--- a/src/pages/list.html
+++ b/src/pages/list.html
@@ -85,8 +85,8 @@
   }
 
   .title {
+    color: #24292e;
     font-size: 20px;
-    color: #333333;
     letter-spacing: 0;
     text-decoration: none;
   }
@@ -100,7 +100,7 @@
   .content {
     margin-top: 10px;
     font-size: 14px;
-    color: #737373;
+    color: #24292e;
   }
 
   .loadmore {
