--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Coala Blog</title>
+  <title>Cheft 的博客</title>
   <meta name="viewport" content="initial-scale=1, maximum-scale=1">
 </head>
 <body>
